--- a/daterangepicker.scss
+++ b/daterangepicker.scss
@@ -1,9 +1,8 @@
 //
-// A stylesheet for use with Bootstrap 3.x
-// @author: Dan Grossman http://www.dangrossman.info/
-// @copyright: Copyright (c) 2012-2015 Dan Grossman. All rights reserved.
+// A stylesheet for use with Bulma 0.1.2+
+// @author: Guilherme Pacheco http://www.gfpacheco.com/
+// @copyright: Copyright (c) 2016 Guilherme Pacheco. All rights reserved.
 // @license: Licensed under the MIT license. See http://www.opensource.org/licenses/mit-license.php
-// @website: https://www.improvely.com/
 //
 
 //
