--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -9,55 +9,9 @@
   top: 100px;
   left: 20px;
   /* Calendars */ }
-  .daterangepicker:before, .daterangepicker:after {
-    position: absolute;
-    display: inline-block;
-    border-bottom-color: rgba(0, 0, 0, 0.2);
-    content: ''; }
-  .daterangepicker:before {
-    top: -7px;
-    border-right: 7px solid transparent;
-    border-left: 7px solid transparent;
-    border-bottom: 7px solid #ccc; }
-  .daterangepicker:after {
-    top: -6px;
-    border-right: 6px solid transparent;
-    border-bottom: 6px solid #fff;
-    border-left: 6px solid transparent; }
-  .daterangepicker.opensleft:before {
-    right: 9px; }
-  .daterangepicker.opensleft:after {
-    right: 10px; }
-  .daterangepicker.openscenter:before {
-    left: 0;
-    right: 0;
-    width: 0;
-    margin-left: auto;
-    margin-right: auto; }
-  .daterangepicker.openscenter:after {
-    left: 0;
-    right: 0;
-    width: 0;
-    margin-left: auto;
-    margin-right: auto; }
-  .daterangepicker.opensright:before {
-    left: 9px; }
-  .daterangepicker.opensright:after {
-    left: 10px; }
   .daterangepicker.dropup {
     margin-top: -5px; }
-    .daterangepicker.dropup:before {
-      top: initial;
-      bottom: -7px;
-      border-bottom: initial;
-      border-top: 7px solid #ccc; }
-    .daterangepicker.dropup:after {
-      top: initial;
-      bottom: -6px;
-      border-bottom: initial;
-      border-top: 6px solid #fff; }
   .daterangepicker.dropdown-menu {
-    max-width: none;
     z-index: 3001; }
   .daterangepicker.single .ranges, .daterangepicker.single .calendar {
     float: none; }
@@ -65,7 +19,6 @@
     display: block; }
   .daterangepicker .calendar {
     display: none;
-    max-width: 270px;
     margin: 4px; }
     .daterangepicker .calendar.single .calendar-table {
       border: none; }
@@ -75,12 +28,14 @@
       min-width: 32px; }
   .daterangepicker .calendar-table {
     border: 1px solid #fff;
-    padding: 4px;
+    margin: 4px 0;
     border-radius: 4px;
     background: #fff; }
   .daterangepicker table {
     width: 100%;
     margin: 0; }
+    .daterangepicker table.table tr:hover {
+      background-color: transparent; }
   .daterangepicker td, .daterangepicker th {
     text-align: center;
     width: 20px;
@@ -116,60 +71,40 @@
     border-color: transparent;
     color: #fff; }
   .daterangepicker th.month {
-    width: auto; }
-  .daterangepicker td.disabled, .daterangepicker option.disabled {
+    width: auto;
+    line-height: 24px; }
+  .daterangepicker th.prev i, .daterangepicker th.next i {
+    line-height: 24px; }
+  .daterangepicker td.is-disabled, .daterangepicker option.is-disabled {
     color: #999;
     cursor: not-allowed;
     text-decoration: line-through; }
-  .daterangepicker select.monthselect, .daterangepicker select.yearselect {
-    font-size: 12px;
-    padding: 1px;
-    height: auto;
-    margin: 0;
-    cursor: default; }
-  .daterangepicker select.monthselect {
+  .daterangepicker .select.monthselectspan {
     margin-right: 2%;
     width: 56%; }
-  .daterangepicker select.yearselect {
+  .daterangepicker .select.yearselectspan {
     width: 40%; }
-  .daterangepicker select.hourselect, .daterangepicker select.minuteselect, .daterangepicker select.secondselect, .daterangepicker select.ampmselect {
+  .daterangepicker .select.hourselectspan, .daterangepicker .select.minuteselectspan, .daterangepicker .select.secondselectspan, .daterangepicker .select.ampmselectspan {
     width: 50px;
     margin-bottom: 0; }
-  .daterangepicker .input-mini {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    color: #555;
-    height: 30px;
-    line-height: 30px;
-    display: block;
-    vertical-align: middle;
-    margin: 0 0 5px 0;
-    padding: 0 6px 0 28px;
-    width: 100%; }
-    .daterangepicker .input-mini.active {
-      border: 1px solid #08c;
-      border-radius: 4px; }
   .daterangepicker .daterangepicker_input {
     position: relative; }
+    .daterangepicker .daterangepicker_input input {
+      padding: 1px 8px 1px 26px; }
     .daterangepicker .daterangepicker_input i {
       position: absolute;
       left: 8px;
       top: 8px; }
-  .daterangepicker.rtl .input-mini {
-    padding-right: 28px;
-    padding-left: 6px; }
+  .daterangepicker.rtl .daterangepicker_input input {
+    padding: 1px 26px 1px 8px; }
   .daterangepicker.rtl .daterangepicker_input i {
     left: auto;
     right: 8px; }
   .daterangepicker .calendar-time {
     text-align: center;
     margin: 5px auto;
-    line-height: 30px;
     position: relative;
     padding-left: 28px; }
-    .daterangepicker .calendar-time select.disabled {
-      color: #ccc;
-      cursor: not-allowed; }
 
 .ranges {
   font-size: 11px;
@@ -217,22 +152,15 @@
       direction: ltr;
       text-align: left; }
       .daterangepicker.ltr .calendar.left {
-        clear: left;
-        margin-right: 0; }
+        clear: left; }
         .daterangepicker.ltr .calendar.left .calendar-table {
           border-right: none;
           border-top-right-radius: 0;
           border-bottom-right-radius: 0; }
-      .daterangepicker.ltr .calendar.right {
-        margin-left: 0; }
-        .daterangepicker.ltr .calendar.right .calendar-table {
-          border-left: none;
-          border-top-left-radius: 0;
-          border-bottom-left-radius: 0; }
-      .daterangepicker.ltr .left .daterangepicker_input {
-        padding-right: 12px; }
-      .daterangepicker.ltr .calendar.left .calendar-table {
-        padding-right: 12px; }
+      .daterangepicker.ltr .calendar.right .calendar-table {
+        border-left: none;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0; }
       .daterangepicker.ltr .ranges, .daterangepicker.ltr .calendar {
         float: left; }
     .daterangepicker.rtl {
