--- a/daterangepicker.scss
+++ b/daterangepicker.scss
@@ -254,6 +254,10 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
     &.next {
       i {
         line-height: 24px;
+
+        &.material-icons {
+          display: block;
+        }
       }
     }
   }
@@ -301,6 +305,10 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
       // NOTE: These appear to be eyeballed to me...
       left: 8px;
       top: 8px;
+
+      &.material-icons {
+        font-size: 16px;
+      }
     }
   }
   &.rtl {
@@ -324,6 +332,10 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
     margin: 5px auto;
     position: relative;
     padding-left: 28px;
+
+    .material-icons {
+      top: 4px;
+    }
   }
 }
 
