Fix dropdown-menu showing before needed

--- a/daterangepicker.scss
+++ b/daterangepicker.scss
@@ -129,6 +129,7 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
   }
 
   &.dropdown-menu {
+    display: none;
     z-index: $daterangepicker-dropdown-z-index;
   }
 
