--- a/daterangepicker.css
+++ b/daterangepicker.css
@@ -12,6 +12,7 @@
   .daterangepicker.dropup {
     margin-top: -5px; }
   .daterangepicker.dropdown-menu {
+    display: none;
     z-index: 3001; }
   .daterangepicker.single .ranges, .daterangepicker.single .calendar {
     float: none; }
